# BlackRainbow

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  Vite.Config.ts  Vite.Config2.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: NPM.yml  Node.yml  Rust.yml  node.yml  rust.yml
Configuration/: ESBuild.d.ts  ESBuild.js  ESBuild.ts  esbuild.js
Source/Script/: Fa.ts  Ta.ts
Source/Scripts/: Fa.ts
Src/scripts/: Fa.ts  Ta.ts
config/: ESBuild.ts  esbuild.d.ts  esbuild.js  esbuild.ts
src-tauri/: Cargo.toml  main.wxs  tauri.conf.json
src-tauri/Source/: main.rs
src-tauri/src/: main.rs
src/lib/: DOM.ts  dom.ts
src/scripts/: Fa.ts  Ta.ts  fa.ts  ta.ts
src/styles/: ta.css  ta.module.css
tauri/: README.md  esbuild.ts  package.json  todo.md  tsconfig.json  webpack.config.js
tauri/config/: esbuild.d.ts  esbuild.js  esbuild.ts
tauri/src/: fa.ts  ta.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
tauri/src/lib/: dom.ts
tauri/src/scripts/: fa.ts  ta.ts
tauri/types/: window.d.ts
