[package]
name = "tauri"
version = "0.0.1"

[build]
target-dir = "Target"

[build-dependencies]
tauri-build = { version = "1.5.3", features = [] }
tauri = { version = "1.7.1", features = ["api-all", "devtools", "system-tray"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(windows)".dependencies]
winapi = { version = "0.3.9", features = ["shellscalingapi"] }

[[bin]]
name = "Build"
path = "build.rs"
