[package]
name = "tauri"
version = "0.0.1"
description = ""
authors = ["Nikola Hristov <president@nikolahristov.tech>"]
license-file = "LICENSE"
repository = ""
default-run = "tauri"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
wry = "0.20.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["system-tray", "window-set-position"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
