[package]
name = "tauri"
version = "1.0.0"
description = ""
authors = ["Nikola Hristov <nikola@nikolahristov.tech>"]
license-file = "LICENSE"
repository = ""
default-run = "tauri"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
wry = "0.21.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["system-tray", "window-set-position"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
